tests/ui-nightly/transmute-bound-dst-not-frombytes.stderr
error[E0277]: the trait bound `NotZerocopy<AU16>: FromBytes` is not satisfied
 --> tests/ui-nightly/transmute-bound-dst-not-frombytes.rs:9:47
  |
9 | const DST_NOT_FROM_BYTES: NotZerocopy<AU16> = zerocopy::transmute!(AU16(0));
  |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromBytes` is not implemented for `NotZerocopy<AU16>`
  |
  = help: the following other types implement trait `FromBytes`:
            ()
            AU16
            F32<O>
            F64<O>
            I128<O>
            I16<O>
            I32<O>
            I64<O>
          and $N others
note: required by a bound in `DST_NOT_FROM_BYTES::transmute`
 --> tests/ui-nightly/transmute-bound-dst-not-frombytes.rs:9:47
  |
9 | const DST_NOT_FROM_BYTES: NotZerocopy<AU16> = zerocopy::transmute!(AU16(0));
  |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `transmute`
  = note: this error originates in the macro `zerocopy::transmute` (in Nightly builds, run with -Z macro-backtrace for more info)
